# GeoRegistrationAnalyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  runner-options.ps1  runner.ps1  runner.sh
src/: CMakeLists.txt  geo-registration-analyzer.cpp
src/app/: CMakeLists.txt  geo-registration-analyzer.cpp
src/app/core/: MessageService.cpp  System_Configuration.hpp  System_Manager.cpp  System_Manager.hpp
src/app/gui/: Main_Window.cpp  Main_Window.hpp
src/app/log/: Log_Handler_Base.cpp  Log_Handler_Base.hpp  Log_Handler_Console.hpp  Log_Handler_Factory.cpp  Log_Handler_Factory.hpp  Log_Handler_File.hpp  Log_Handler_Qt.hpp
src/apps/: CMakeLists.txt
src/apps/geo-registration-analyzer/: CMakeLists.txt  geo-registration-analyzer.cpp
src/apps/geo-registration-analyzer/core/: CMakeLists.txt  System_Config_Utils.cpp  System_Config_Utils.hpp
src/apps/geo-registration-analyzer/gui/: CMakeLists.txt  ConfigurationSaveDialog.cpp  ConfigurationSaveDialog.hpp  LogViewerPanel.cpp  LogViewerPanel.hpp  Main_Window.cpp  Main_Window.hpp  PreferenceDialog.cpp  PreferenceDialog.hpp  ProjectBasePanel.cpp  ProjectBasePanel.hpp  ProjectViewerPanelBase.cpp  ProjectViewerPanelBase.hpp  ProjectViewerPanelFactory.cpp  ProjectViewerPanelFactory.hpp
src/apps/geo-registration-analyzer/html/: cesium_maps.html  google_maps.html
src/apps/geo-registration-analyzer/utility/: CMakeLists.txt  Init_Utilities.cpp  Init_Utilities.hpp
src/apps/geo-viewer/: CMakeLists.txt  geo-viewer.cpp
src/apps/geo-viewer/core/: CMakeLists.txt  System_Config_Utils.cpp
src/apps/geo-viewer/gui/: CMakeLists.txt  Main_Window.cpp  Main_Window.hpp  ProjectBasePanel.cpp  ProjectBasePanel.hpp  ProjectImageryPanel.cpp  ProjectImageryPanel.hpp  ProjectImageryToolbar.cpp  ProjectImageryToolbar.hpp  ProjectViewer.cpp  ProjectViewer.hpp
src/apps/geo-viewer/utility/: CMakeLists.txt
src/comm/: CMakeLists.txt  MessageService.cpp  MessageService.hpp
src/core/: BlockingQueue.hpp  CMakeLists.txt  Config_Param.cpp  Config_Param.hpp  Enumerations.cpp  Enumerations.hpp  MessageService.hpp  Status.cpp  Status.hpp  StatusReason.cpp  System_Config_Utils.cpp  System_Config_Utils.hpp  System_Configuration.cpp  System_Configuration.hpp  System_Manager.cpp  System_Manager.hpp  Thread_Pool.cpp  Thread_Pool.hpp
src/core/assets/: Asset_Base.cpp  Asset_Base.hpp  Asset_Image_Base.cpp  Asset_Image_Base.hpp  Asset_Image_Google.hpp  Asset_Image_Local.cpp  Asset_Image_Local.hpp  Asset_Manager.cpp  Asset_Manager.hpp  Image_Asset_Builder.cpp  Image_Asset_Builder.hpp
src/gui/: AnalysisBasePanel.hpp  ImportProjectDialog.cpp  ImportProjectDialog.hpp  Main_Window.cpp  Main_Window.hpp  MatchingBasePanel.hpp  NewProjectPanelBase.cpp  NewProjectPanelBase.hpp  NewProjectPanelFactory.cpp  PreferenceDialog.cpp  PreferenceDialog.hpp  ProjectViewerPanelFactory.cpp  ReferenceImageryPanel.cpp  ReferenceImageryPanel.hpp  TestImageryPanel.hpp
src/gui/Analysis/: AnalysisBasePanel.cpp  AnalysisBasePanel.hpp
src/gui/GeoWidget/: GeoViewerBase.cpp  GeoViewerBase.hpp  GeoViewerFactory.cpp  GeoViewerFactory.hpp  GeoViewerGDAL.cpp  GeoViewerGDAL.hpp  GeoViewerGoogle.cpp  GeoViewerGoogle.hpp  GeoViewerLocal.cpp  GeoViewerLocal.hpp  GeoWidget.cpp  GeoWidget.hpp
src/gui/Matching/: MatchingBasePanel.cpp  MatchingBasePanel.hpp  ProjectViewerPanelMatching.cpp  ProjectViewerPanelMatching.hpp  ReferenceImageryPanel.cpp  ReferenceImageryPanel.hpp  ReferenceToolbar.cpp  ReferenceToolbar.hpp  TestImageryPanel.cpp  TestImageryPanel.hpp  TestToolbar.cpp  TestToolbar.hpp
src/gui/Matching/Toolbar/: MatchingToolbarWidget.cpp  PrimaryMatchingToolbarPane.cpp  PrimaryMatchingToolbarPane.hpp
src/gui/Matching/Worker/: MatchingImportProjectJob.cpp  MatchingImportProjectJob.hpp  Matching_Worker.cpp  Matching_Worker.hpp
src/gui/Toolbar/: ToolbarWidget.cpp  ToolbarWidget.hpp
src/gui/geo_widget/: GeoViewerBase.hpp  GeoViewerFactory.hpp  GeoViewerGoogle.cpp  GeoViewerGoogle.hpp  GeoViewerLocal.cpp  GeoViewerLocal.hpp  GeoWidget.hpp
src/gui/matching/: MatchingBasePanel.cpp  MatchingBasePanel.hpp  NewProjectPanelMatching.cpp  NewProjectPanelMatching.hpp  ReferenceImageryPanel.hpp  TestImageryPanel.cpp  TestImageryPanel.hpp
src/gui/matching/Toolbar/: ProjectMatchingToolbarPane.cpp
src/gui/matching/Worker/: MatchingImportProjectJob.cpp  MatchingImportProjectJob.hpp  Matching_Worker.cpp
src/gui/project_dialogs/: ImportProjectDialog.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  NewProjectPanelBase.hpp
src/io/: CMakeLists.txt  GDAL_Image_Loader.cpp  GDAL_Utilities.cpp  GDAL_Utilities.hpp  INI_Parser.cpp  INI_Parser.hpp  OpenCV_Utilities.cpp  OpenCV_Utilities.hpp
src/libGeoImage/: CMakeLists.txt
src/libGeoImage/GeoImage/: CMakeLists.txt  coordinate.hpp  core.hpp
src/libGeoImage/GeoImage/coordinate/: CMakeLists.txt  CoordinateBase.cpp  CoordinateBase.hpp  CoordinateFactory.cpp  CoordinateFactory.hpp  CoordinateGeographic.cpp  CoordinateGeographic.hpp  CoordinateProjectedBase.cpp  CoordinateProjectedBase.hpp  CoordinateUTM.cpp  CoordinateUTM.hpp
src/libGeoImage/GeoImage/core/: BlockingQueue.hpp  CMakeLists.txt  Config_Param.cpp  Config_Param.hpp  Signal_Handlers.cpp  Signal_Handlers.hpp  Status.cpp  Status.hpp  StatusReason.cpp  StatusReason.hpp  Thread_Pool.cpp  Thread_Pool.hpp
src/libGeoImage/unit-tests/: CMakeLists.txt  lib-geo-image-unit-tests.cpp
src/libGeoViewer/: CMakeLists.txt  GeoViewer.hpp
src/libGeoViewer/GeoViewer/: CMakeLists.txt  assets.hpp  core.hpp  io.hpp  log.hpp
src/libGeoViewer/unit-tests/: CMakeLists.txt  lib-geo-viewer-unit-tests.cpp
src/log/: CMakeLists.txt  Log_Formatter.hpp  Log_Handler_Base.cpp  Log_Handler_Base.hpp  Log_Handler_Console.cpp  Log_Handler_Console.hpp  Log_Handler_File.cpp  Log_Handler_File.hpp  Log_Handler_Qt.cpp  Log_Handler_Qt.hpp  Log_Severity.cpp  System_Logger.cpp  System_Logger.hpp
src/utility/: CMakeLists.txt  Init_Utilities.cpp  Init_Utilities.hpp  String_Utilities.hpp
test/: CMakeLists.txt
test/core/: TEST_Config_Param.cpp  TEST_System_Configuration.cpp
test/core/assets/: TEST_Image_Asset_Builder.cpp
(+205 files in other folders)
