#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    8/4/2017
#
#    Purpose:  Construct Geo-Viewer Dependencies
#


#---------------------------------#
#-      Add the LibGeoViewer     -#
#---------------------------------#
add_subdirectory(libGeoViewer)

#-----------------------------------------#
#-      Add Applications Directories     -#
#-----------------------------------------#
add_subdirectory(apps)

