#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    8/4/2017
# 
#    Purpose:  Construct GeoViewer Applications
#


#------------------------------#
#-      Build Geo-Viewer      -#
#------------------------------#
add_subdirectory(geo-viewer)


#------------------------------------------------#
#-      Build the Geo Registration Utility      -#
#------------------------------------------------#
add_subdirectory(geo-registration-analyzer)


