#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    9/2/2017
#


#------------------------------------#
#-      Add Coordinate Library      -#
#------------------------------------#
add_subdirectory(coordinate)


#------------------------------------#
#-        Add Image Library         -#
#------------------------------------#
add_subdirectory(image)
