#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    9/2/2017
#


#-----------------------------------#
#-        Add Core Library         -#
#-----------------------------------#
add_subdirectory(core)


#------------------------------------#
#-      Add Coordinate Library      -#
#------------------------------------#
add_subdirectory(coordinate)


#------------------------------------#
#-        Add Image Library         -#
#------------------------------------#
add_subdirectory(image)


#------------------------------------#
#-        Add Utility Library       -#
#------------------------------------#
add_subdirectory(utility)
